fixed multiple event error. made all links functioning.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,11 +23,11 @@
                     <span style="margin-right: 10px; text-align: left;"> <a
                             ui-sref="home">Home</a>
                     </span> <span style="margin-right: 10px; text-align: left;"> <a
-                href="familySearch.html"> My Family Search! </a>
+                ui-sref="familySearch">Family Search</a>
                     </span> <span style="margin-right: 10px; text-align: left;"> <a
-                href="signup.html"> Sign Up! </a>
+                ui-sref="signUp">Sign Up</a>
                     </span> <span style="margin-right: 10px; text-align: left;"> <a
-                ui-sref="eventForm" ng-click="clearEventForm()">Create Event</a>
+                ui-sref="eventForm">Create Event</a>
                     </span>
         </div>
     </div>
