--- a/src/main/webapp/stages/eventForm.ng.html
+++ b/src/main/webapp/stages/eventForm.ng.html
@@ -1,4 +1,4 @@
-<div>
+
     <form name="eventForm" novalidate>
         <div class="row">
             <div class="col-md-12 align-center">
@@ -8,9 +8,10 @@
         <br>
 
         <div class="well row">
-            <div class="col-md-9 col-md-offset-3">
+            <div class="col-md-2 col-md-offset-2 align-right">
                 <b>General Event Information</b>
             </div>
+            <div class="col-md- 8"></div>
         </div>
 
         <div class="row"
@@ -39,16 +40,6 @@
                    class="help-block">Must be filled out</p>
             </div>
         </div>
-
-
-        <div class="col-md-1"></div>
-        <br>
-
-        <!--<div class="well col-md-2 col-md-offset-1">
-            <p class=" align-center"><b>Upcoming Events</b></p>
-            <li ng-repeat="event in eventArray"><a ui-sref="eventOverview" ng-click="setEvent($index)">{{event.getName()}}</a>
-            </li>
-        </div> -->
         <br>
 
         <div class="row"
@@ -94,9 +85,10 @@
         <br> <br>
 
         <div class="well row">
-            <div class="col-md-9 col-md-offset-3">
+            <div class="col-md-2 col-md-offset-2 align-right">
                 <label>Event Location</label>
             </div>
+            <div class="col-md- 8"></div>
         </div>
 
         <div class="row"
@@ -246,42 +238,41 @@
         <br> <br>
 
         <div class="well row">
-            <div class="col-md-9 col-md-offset-3">
+            <div class="col-md-2 col-md-offset-2 align-right">
                 <label>Event Date and Time</label>
             </div>
+            <div class="col-md- 8"></div>
         </div>
 
         <div class="row">
             <div
                     ng-class="{ 'has-error' : eventForm.startDate.$invalid && !eventForm.startDate.$pristine }">
-                <div class="col-md-2 col-md-offset-3 align-right">Event
+                <div class="col-md-2 col-md-offset-2 align-right">Event
                     Starting Date:
                 </div>
-                <div class="col-md-2">
-                    <input type="datetime-local" ng-model="eventUIObject.startDate"
-                           name="startDate" class="form-control" required/>
-                </div>
-                <div class="col-md-7 align-left"></div>
+                    <div class="col-md-2">
+                        <input type="datetime-local" class="form-control" ng-model="eventUIObject.startDate" name="startDate" required/>
+                    </div>
+                <div class="col-md-6 align-left"></div>
                 <p
                         ng-show="eventForm.startDate.$invalid && !eventForm.startDate.$pristine"
                         class="help-block">The event start date is required</p>
             </div>
         </div>
 
-
         <br> <br>
 
         <div class="row">
             <div
                     ng-class="{ 'has-error' : eventForm.endDate.$invalid && !eventForm.endDate.$pristine }">
-                <div class="col-md-2 col-md-offset-3 align-right">Event Ending
+                <div class="col-md-2 col-md-offset-2 align-right">Event Ending
                     Date:
                 </div>
                 <div class="col-md-2">
                     <input type="datetime-local" ng-model="eventUIObject.endDate"
                            name="endDate" class="form-control" required/>
                 </div>
-                <div class="col-md-7 align-left">
+                <div class="col-md-6 align-left">
                     <p
                             ng-show="eventForm.endDate.$invalid && !eventForm.endDate.$pristine"
                             class="help-block">The event end date is required</p>
@@ -294,9 +285,10 @@
 
     <form name="attendeeForm" novalidate>
         <div class="well row">
-            <div class="col-md-9 col-md-offset-3">
+            <div class="col-md-2 col-md-offset-2 align-right">
                 <label>Add Attendee </label>
             </div>
+            <div class="col-md- 8"></div>
         </div>
 
         <div class="row">
@@ -307,10 +299,10 @@
         </div>
         <div class="row">
             <div ng-class="{ 'has-error' : attendeeForm.name.$invalid && !attendeeForm.name.$pristine }">
-                <div class="col-md-1 col-md-offset-2 align-right">
+                <div class="col-md-2 col-md-offset-2 align-right">
                     Name:
                 </div>
-                <div class="col-md-2 align-left">
+                <div class="col-md-1 align-left">
                     <input type="text" class="form-control" ng-model="attendeeUIObject.name"
                            name="name" required/>
                 </div>
@@ -349,7 +341,7 @@
         <br>
 
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-4 col-md-offset-4">
                 <table class="table table-condensed table-striped" ng-show="attendeeArray.length != 0">
                     <tr class="info">
                         <td><b>#</b></td>
@@ -368,7 +360,7 @@
                     </tr>
                 </table>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-4"></div>
         </div>
     </form>
 
@@ -381,4 +373,3 @@
         <div class="col-md-2"></div>
     </div>
     <br><br>
-</div>
