--- a/src/main/webapp/stages/home.ng.html
+++ b/src/main/webapp/stages/home.ng.html
@@ -5,6 +5,7 @@
             <li ng-repeat="event in eventArray"><a ui-sref="eventOverview" ng-click="setEvent($index)">{{event.getName()}}</a>
             </li>
         </div>
+        <div class="col-md-9"></div>
     </div>
     <div class="row">
         <div class="col-md-4 family">
