file structure alteration

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,14 +45,14 @@
 <script src="libs/angularjs/1.2/angular.min.js"></script>
 <script src="libs/angularjs/1.2/angular-ui-router.min.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.extensions.ObjectExtension.js"></script>
-<script src="app.js"></script>
-<script src="js/services/EventService.js"></script>
-<script src="js/domains/attendee.js"></script>
-<script src="js/domains/event.js"></script>
-<script src="js/controllers/homeController.js"></script>
-<script src="js/controllers/createUserController.js"></script>
-<script src="js/controllers/eventFormController.js"></script>
-<script src="js/controllers/eventOverviewController.js"></script>
+<script src="js/angular/app.js"></script>
+<script src="js/angular/services/EventService.js"></script>
+<script src="js/software.bytepushers.domain.attendee.js"></script>
+<script src="js/software.bytepushers.domain.event.js"></script>
+<script src="js/angular/controllers/homeController.js"></script>
+<script src="js/angular/controllers/createUserController.js"></script>
+<script src="js/angular/controllers/eventFormController.js"></script>
+<script src="js/angular/controllers/eventOverviewController.js"></script>
 
 </body>
 </html>
