Makes POST request successfully, but not sending array objects to ws

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,6 +47,10 @@
 <script src="libs/byte-pushers/com.bytepushers.extensions.ObjectExtension.js"></script>
 <script src="js/angular/app.js"></script>
 <script src="js/angular/services/EventService.js"></script>
+<script src="js/angular/services/UserProfileService.js"></script>
+<script src="js/software.bytepushers.domain.person.js"></script>
+<script src="js/software.bytepushers.domain.address.js"></script>
+<script src="js/software.bytepushers.domain.phoneNumber.js"></script>
 <script src="js/software.bytepushers.domain.attendee.js"></script>
 <script src="js/software.bytepushers.domain.event.js"></script>
 <script src="js/angular/controllers/homeController.js"></script>
