--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,6 +48,7 @@
 <script src="js/angular/app.js"></script>
 <script src="js/angular/services/EventService.js"></script>
 <script src="js/angular/services/UserProfileService.js"></script>
+<script src="js/angular/directives/equals.js"></script>
 <script src="js/software.bytepushers.domain.person.js"></script>
 <script src="js/software.bytepushers.domain.address.js"></script>
 <script src="js/software.bytepushers.domain.phoneNumber.js"></script>
