--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,6 +56,7 @@
 <script src="js/software.bytepushers.domain.event.js"></script>
 <script src="js/angular/controllers/homeController.js"></script>
 <script src="js/angular/controllers/createUserController.js"></script>
+<script src="js/angular/controllers/userCreatedController.js"></script>
 <script src="js/angular/controllers/eventFormController.js"></script>
 <script src="js/angular/controllers/eventOverviewController.js"></script>
 
