refactored to accept WebServicesResponse from the UserProfileWebService

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,6 +49,9 @@
 <script src="js/angular/services/EventService.js"></script>
 <script src="js/angular/services/UserProfileService.js"></script>
 <script src="js/angular/directives/equals.js"></script>
+<script src="js/software.bytepushers.domain.WebServiceResponse.js"></script>
+<script src="js/software.bytepushers.domain.WebServiceResponseStatus.js"></script>
+<script src="js/software.bytepushers.domain.WebServicePayload.js"></script>
 <script src="js/software.bytepushers.domain.person.js"></script>
 <script src="js/software.bytepushers.domain.address.js"></script>
 <script src="js/software.bytepushers.domain.phoneNumber.js"></script>
