--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,14 +49,14 @@
 <script src="js/angular/services/EventService.js"></script>
 <script src="js/angular/services/UserProfileService.js"></script>
 <script src="js/angular/directives/equals.js"></script>
-<script src="js/software.bytepushers.domain.WebServiceResponse.js"></script>
-<script src="js/software.bytepushers.domain.WebServiceResponseStatus.js"></script>
-<script src="js/software.bytepushers.domain.WebServicePayload.js"></script>
-<script src="js/software.bytepushers.domain.person.js"></script>
-<script src="js/software.bytepushers.domain.address.js"></script>
-<script src="js/software.bytepushers.domain.phoneNumber.js"></script>
-<script src="js/software.bytepushers.domain.attendee.js"></script>
-<script src="js/software.bytepushers.domain.event.js"></script>
+<script src="js/models/software.bytepushers.domain.WebServiceResponse.js"></script>
+<script src="js/models/software.bytepushers.domain.WebServiceResponseStatus.js"></script>
+<script src="js/models/software.bytepushers.domain.WebServicePayload.js"></script>
+<script src="js/models/software.bytepushers.domain.person.js"></script>
+<script src="js/models/software.bytepushers.domain.address.js"></script>
+<script src="js/models/software.bytepushers.domain.phoneNumber.js"></script>
+<script src="js/models/software.bytepushers.domain.attendee.js"></script>
+<script src="js/models/software.bytepushers.domain.event.js"></script>
 <script src="js/angular/controllers/homeController.js"></script>
 <script src="js/angular/controllers/createUserController.js"></script>
 <script src="js/angular/controllers/userCreatedController.js"></script>
