--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,14 +7,15 @@
     <link href="libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css"
           rel="stylesheet" type="text/css"/>
     <link href="css/index.css" type="text/css" rel="stylesheet"/>
-    <link href="css/event.css" type="text/css" rel="stylesheet"/>
+    <link href="css/general.css" type="text/css" rel="stylesheet"/>
     <link href="css/main-layout.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
 <div id="header-container" class="">
     <div class="row container-fluid">
-        <div class="col-md-12">Header</div>
+        <div class="col-md-6 align-left">Header</div>
+        <div class="col-md-6 align-right"><a ui-sref="signIn">Sign in</a></div>
     </div>
 </div>
 
