--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,13 +49,17 @@
 <script src="js/angular/app.js"></script>
 <script src="js/angular/services/EventService.js"></script>
 <script src="js/angular/services/UserProfileService.js"></script>
+<script src="js/angular/services/SearchService.js"></script>
 <script src="js/angular/directives/equals.js"></script>
-<script src="js/models/software.bytepushers.domain.WebServiceResponse.js"></script>
-<script src="js/models/software.bytepushers.domain.WebServiceResponseStatus.js"></script>
-<script src="js/models/software.bytepushers.domain.WebServicePayload.js"></script>
+<script src="js/angular/directives/requiredAny.js"></script>
+<script src="js/models/software.bytepushers.domain.webServiceResponse.js"></script>
+<script src="js/models/software.bytepushers.domain.webServiceResponseStatus.js"></script>
+<script src="js/models/software.bytepushers.domain.webServicePayload.js"></script>
+<script src="js/models/software.bytepushers.domain.searchRequest.js"></script>
 <script src="js/models/software.bytepushers.domain.person.js"></script>
-<script src="js/models/software.bytepushers.domain.address.js"></script>
+<script src="js/models/software.bytepushers.domain.email.js"></script>
 <script src="js/models/software.bytepushers.domain.phoneNumber.js"></script>
+<script src="js/models/software.bytepushers.domain.address.js"></script>
 <script src="js/models/software.bytepushers.domain.attendee.js"></script>
 <script src="js/models/software.bytepushers.domain.event.js"></script>
 <script src="js/angular/controllers/homeController.js"></script>
@@ -63,6 +67,8 @@
 <script src="js/angular/controllers/userCreatedController.js"></script>
 <script src="js/angular/controllers/eventFormController.js"></script>
 <script src="js/angular/controllers/eventOverviewController.js"></script>
+<script src="js/angular/controllers/familySearch.byUserController.js"></script>
+<script src="js/angular/controllers/familySearch.byLocationController.js"></script>
 
 </body>
 </html>
