--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,9 +52,9 @@
 <script src="js/angular/services/SearchService.js"></script>
 <script src="js/angular/directives/equals.js"></script>
 <script src="js/angular/directives/requiredAny.js"></script>
-<script src="js/models/software.bytepushers.domain.webServiceResponse.js"></script>
-<script src="js/models/software.bytepushers.domain.webServiceResponseStatus.js"></script>
-<script src="js/models/software.bytepushers.domain.webServicePayload.js"></script>
+<script src="js/models/software.bytepushers.domain.WebServiceResponse.js"></script>
+<script src="js/models/software.bytepushers.domain.WebServiceResponseStatus.js"></script>
+<script src="js/models/software.bytepushers.domain.WebServicePayload.js"></script>
 <script src="js/models/software.bytepushers.domain.searchRequest.js"></script>
 <script src="js/models/software.bytepushers.domain.person.js"></script>
 <script src="js/models/software.bytepushers.domain.email.js"></script>
