Working on transforming the JSON response into correct JavaScript Objects.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,6 +46,14 @@
 <script src="libs/angularjs/1.2/angular.min.js"></script>
 <script src="libs/angularjs/1.2/angular-ui-router.min.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.extensions.ObjectExtension.js"></script>
+<script src="libs/byte-pushers/com.bytepushers.Application.js"></script>
+<script src="libs/byte-pushers/Message.js"></script>
+<script src="libs/byte-pushers/com.bytepushers.models.Response.js"></script>
+<script src="libs/byte-pushers/com.bytepushers.models.ResponseException.js"></script>
+<script src="libs/byte-pushers/com.bytepushers.models.ResponseExceptionStackTrace.js"></script>
+<script src="libs/byte-pushers/com.bytepushers.models.ResponseStatus.js"></script>
+<script src="libs/byte-pushers/com.bytepushers.models.ResponseStatusTransformer.js"></script>
+<script src="libs/byte-pushers/com.bytepushers.models.ResponseTransformer.js"></script>
 <script src="js/angular/app.js"></script>
 <script src="js/angular/services/EventService.js"></script>
 <script src="js/angular/services/UserProfileService.js"></script>
@@ -57,6 +65,7 @@
 <script src="js/models/software.bytepushers.domain.WebServicePayload.js"></script>
 <script src="js/models/software.bytepushers.domain.searchRequest.js"></script>
 <script src="js/models/software.bytepushers.domain.person.js"></script>
+<script src="js/models/software.bytepushers.domain.PersonTransformer.js"></script>
 <script src="js/models/software.bytepushers.domain.email.js"></script>
 <script src="js/models/software.bytepushers.domain.phoneNumber.js"></script>
 <script src="js/models/software.bytepushers.domain.address.js"></script>
