added two <scripts> UserProfile & UserProfileTransformer

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,6 +64,8 @@
 <script src="js/models/software.bytepushers.domain.WebServiceResponseStatus.js"></script>
 <script src="js/models/software.bytepushers.domain.WebServicePayload.js"></script>
 <script src="js/models/software.bytepushers.domain.searchRequest.js"></script>
+<script src="js/models/software.bytepushers.domain.UserProfile.js"></script>
+<script src="js/models/software.bytepushers.domain.UserProfileTransformer.js"></script>
 <script src="js/models/software.bytepushers.domain.person.js"></script>
 <script src="js/models/software.bytepushers.domain.PersonTransformer.js"></script>
 <script src="js/models/software.bytepushers.domain.email.js"></script>
@@ -78,6 +80,7 @@
 <script src="js/angular/controllers/eventOverviewController.js"></script>
 <script src="js/angular/controllers/familySearch.byUserController.js"></script>
 <script src="js/angular/controllers/familySearch.byLocationController.js"></script>
+
 
 </body>
 </html>
