Renamed createUserController to UserProfileController and updated the code to reflect this name change.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -74,7 +74,7 @@
 <script src="js/models/software.bytepushers.domain.attendee.js"></script>
 <script src="js/models/software.bytepushers.domain.event.js"></script>
 <script src="js/angular/controllers/homeController.js"></script>
-<script src="js/angular/controllers/createUserController.js"></script>
+<script src="js/angular/controllers/software.bytepushers.controller.UsersProfileController.js"></script>
 <script src="js/angular/controllers/userCreatedController.js"></script>
 <script src="js/angular/controllers/eventFormController.js"></script>
 <script src="js/angular/controllers/eventOverviewController.js"></script>
