Re-factored the UserProfileService to provide a custom transform to the tranformResponse parameter of $resource serivce.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,6 +45,7 @@
 
 <script src="libs/angularjs/1.2/angular.min.js"></script>
 <script src="libs/angularjs/1.2/angular-ui-router.min.js"></script>
+<script src="libs/angularjs/1.2/angular-resource.min.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.extensions.ObjectExtension.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.Application.js"></script>
 <script src="libs/byte-pushers/Message.js"></script>
@@ -54,6 +55,7 @@
 <script src="libs/byte-pushers/com.bytepushers.models.ResponseStatus.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.models.ResponseStatusTransformer.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.models.ResponseTransformer.js"></script>
+<script src="libs/byte-pushers/software.bytepushers.exceptions.WebServiceException.js"></script>
 <script src="js/angular/app.js"></script>
 <script src="js/angular/services/EventService.js"></script>
 <script src="js/angular/services/UserProfileService.js"></script>
