Implemented global error handling.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,7 +48,7 @@
 <script src="libs/angularjs/1.2/angular-resource.min.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.extensions.ObjectExtension.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.Application.js"></script>
-<script src="libs/byte-pushers/Message.js"></script>
+<script src="libs/byte-pushers/software.bytepushers.models.Message.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.models.Response.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.models.ResponseException.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.models.ResponseExceptionStackTrace.js"></script>
@@ -56,6 +56,9 @@
 <script src="libs/byte-pushers/com.bytepushers.models.ResponseStatusTransformer.js"></script>
 <script src="libs/byte-pushers/com.bytepushers.models.ResponseTransformer.js"></script>
 <script src="libs/byte-pushers/software.bytepushers.exceptions.WebServiceException.js"></script>
+<script src="libs/byte-pushers/software.bytepushers.filters.MessageFilters.js"></script>
+<script src="libs/byte-pushers/software.bytepushers.handlers.MessageHandler.js"></script>
+<script src="libs/byte-pushers/software.bytepushers.models.Message.js"></script>
 <script src="js/angular/app.js"></script>
 <script src="js/angular/services/EventService.js"></script>
 <script src="js/angular/services/UserProfileService.js"></script>
